# fresh_next

./: .gitignore  README.md  docker-compose_dev.yml  docker-compose_prod.yml  package-lock.json  package.json
backend/: Dockerfile_dev  pyproject.toml
backend/app/: main.py
backend/app/endpoints/: genai.py  risk.py
backend/docker/: Dockerfile_prod
frontend/: Dockerfile_dev  Dockerfile_prod  auth.ts  drizzle.config.ts  package.json  pnpm-lock.yaml
frontend/db/drizzle/: 0002_nostalgic_boom_boom.sql
frontend/db/drizzle/meta/: 0001_snapshot.json  0002_snapshot.json  _journal.json
