[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = []
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "<=3.13,>=3.10.0"
python-dotenv = "^1.0.1"
langchain-core = "^0.2.7"
langchain = "^0.2.5"
langchain-openai = "^0.1.8"
langgraph = "^0.0.69"
langchain-community = "^0.2.5"
fastapi = "^0.111.0"
crewai-tools = { version = "^0.8.3", optional = true }
pandas = "^2.2.3"

